# hobot_audio

./: .arclint  CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
config/: audio.sh  audio_config.json  audio_uac.sh
config/hrsc/: CRGRU_MEETING_29.params  CRGRU_SUBBAND_HIOK.params  cmd_word.json  hisf_config_comms_full_azimuth_encrypt.ini  hisf_config_play_encrypt.ini  hrsc_config.cfg
config/hrsc/answer_tone/: alas.pcm
config/hrsc/asr/: asr_embed.conf  multi_pron_word.txt  rn.conf  sy_map_new
config/hrsc/asr/am_model/state/: bpu_config.json  decode.meanvar.ctc.1.0  states.txt_2.0_j3_hbdk3.26.8
config/hrsc/asr/graph_v0.9/: grammar.resource.grm.RecogNdinfo  grammar.resource.grm.entmap  grammar.resource.txt  grammar.resource.wdclass.unigramla
config/hrsc/asr/graph_v1.1/: grammar.resource.grm.RecoVoc  grammar.resource.nd.ifhave.Unibigramla
config/hrsc/asr/rn/: regex_rule_const.search  regex_rule_normal  regex_rule_normal_time
config/hrsc/e2e_decoder_conf/: online_asr.flag  units.txt
config/hrsc/modelvad/: 20201012-211617-vad-j2_l10r5_cnn16x7x7_cnn16x5x5_dnn48x4_43k_500k_3classes_xiaoya_data-v9-initials-vowel-more-strict-align-quanti.json
include/audio_capture/: hb_audio_capture.h
include/audio_engine/: audioengine.h
include/audio_speaker/: audio_recver.h  audio_recver_node.h  audio_speaker.h
include/horizon_speech_sdk/hrsc/: CRGRU_SUBBAND_HIOK.meanvar  CRGRU_SUBBAND_HIOK_reset_hx_-1.meanvar  CRGRU_SUBBAND_HIOK_reset_hx_-1.params  Dt-99.params  Dt99.params  cmd_word.json  hisf_config_circular_encrypt.ini  hisf_config_comms_full_azimuth_encrypt.ini  hisf_config_encrypt.ini  hisf_config_linear_encrypt.ini  hisf_config_play_encrypt.ini  hrsc_config.cfg
include/horizon_speech_sdk/hrsc/asr/: asr_embed.conf  fillter_word_file  hotword.json.common_misrec  hotword.json.filter  socket_prob_map
include/horizon_speech_sdk/hrsc/asr/graph_v0.9/: grammar.resource.grm.RecoVoc  grammar.resource.grm.wcinfo  grammar.resource.nd.ifhave.Unibigramla
include/horizon_speech_sdk/hrsc/asr/graph_v1.1/: grammar.resource.grm.RecogNdinfo  grammar.resource.grm.lmInfo  grammar.resource.grm.lmInfo.forla  grammar.resource.wdclass.unigramla
include/horizon_speech_sdk/hrsc/asr/rn/: correct.list  regex_rule_const  regex_rule_const.all  regex_rule_const.search.bak  regex_rule_normal  regex_rule_normal.all  regex_rule_normal.jd  regex_rule_normal.search  regex_rule_normal.search.bak  regex_rule_normal_digit_3  regex_rule_normal_time  regex_rule_normal_time_digit
include/horizon_speech_sdk/hrsc/e2e_decoder_conf/: context_type  replace.txt
include/horizon_speech_sdk/hrsc/e2e_decoder_conf/lm/: words.txt
include/horizon_speech_sdk/hrsc/e2e_decoder_conf/rescore/: model.flag
include/horizon_speech_sdk/hrsc/hisf_conf/: CRGRU_SUBBAND_VAD_ONLY_-1.meanvar  CRGRU_SUBBAND_VAD_ONLY_-1.params  RGRU_PAD_64.meanvar  RGRU_PAD_64.params  hisf_config_4mic_circular_encrypt.ini  hisf_config_4mic_linear_encrypt.ini  hisf_config_encrypt.ini
include/horizon_speech_sdk/hrsc/modelvad/: 20201012-211617-vad-j2_l10r5_cnn16x7x7_cnn16x5x5_dnn48x4_43k_500k_3classes_xiaoya_data-v9-initials-vowel-more-strict-align-quanti.meanvar  20201012-211617-vad-j2_l10r5_cnn16x7x7_cnn16x5x5_dnn48x4_43k_500k_3classes_xiaoya_data-v9-initials-vowel-more-strict-align-quanti.params  config.ini
include/horizon_speech_sdk/include/horizonspeechsdk/: hrsc_sdk.h
launch/: hobot_audio.launch.py
src/: audio_example.cpp
src/audio_capture/: alsa_device.cpp  hb_audio_capture.cpp
src/audio_engine/: audioengine.cpp
src/audio_speaker/: audio_recver.cpp  audio_recver_node.cpp  audio_speaker.cpp
src/untils/: alsa_device.cpp
