<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hobot_audio</name>
  <version>2.1.1</version>
  <description>TogetheROS hobot audio</description>
  <maintainer email="zhuo.wang@horizon.cc">zhuo.wang</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>audio_msg</depend>
  <depend>ament_cmake_gtest</depend>

  <depend condition="$PLATFORM == X3">hobot-multimedia-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
